spring-io/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-io
spec:
  selector:
    app: spring-io
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
